# Smart-Home-Assistant

./: .gitignore  CHANGES_LOG  README.md  pyproject.toml  requirements.txt  smart_home.db  template.json
backend/: main.py
backend/app/: __init__.py
backend/app/api/api_v1/: api.py
backend/app/api/api_v1/endpoints/: auth.py  devices.py  users.py  websocket.py
backend/app/core/: config.py  events.py  security.py
backend/app/database/: session.py
backend/app/models/: user.py
backend/app/mqtt/: client.py
