[project]
name = "Smart-Home-Assistant"
version = "None"
description = "Default template for PDM package"
authors = [
    {name = "Orb Studio", email = "cps3362521@gmail.com"},
]
dependencies = []
requires-python = "==3.11.*"
readme = "README.md"
license = {text = "Mozilla Public License Version 2.0"}


[tool.pdm]
distribution = false
